2012-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Adapted to e-TeX Version 2.4.

2012-04-15  Karl Berry  <karl@tug.org>

	* pdftex.web (pdftex_revision, pdftex_version_string)

2012-04-12  Thanh Han The  <thanh@river-valley.org>

	* ttf2afm.c (print_str): new macro, replacing function.
	(escape_eol): new fn, replacing print_str, now returning a string.

	* writettf.c (ttf_reindex_glyphs): use %n to sscanf forms
	uniABCD and index123. 

	* mapfile.c (suppress_warn): way to avoid dup warnings.
	
	* pdftex.web (pdf_suppress_warning_dup_dest_code,
	pdf_suppress_warning_dup_dest_code): new primitives
	\pdfsuppresswarningdupdest and \pdfsuppresswarningdupmap.
	(get_pdf_suppress_warning_dup_map): new fn.
	(warn_dest_dup): check pdf_suppress_warning_dup_dest.

2012-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Fixed a typo in TeX text (for e-TeX).

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writejbig2.c (getstreamlen): Change type to `off_t'.
	Use LONGINTEGER_TYPE and LONGINTEGER_PRId for printing.

2012-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Consistent support for large JBIG2 files.
	* writejbig2.c: Change type of various struct members, local
	variables and findstreamstart() from `long' or `unsigned long'
	to `off_t'.  Do not use xfseek and xfseeko for the same file.

2011-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Change type of pdf_ptr: longinteger => integer.
	* pdftex-common.h: Change type of pdfptr accordingly.

2011-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (getfiledump): Drop `off_t' cast from arg2 of fseek().
	* ttf2afm.c, writettf.c: Typo in comment.

2011-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writejbig2.h (removed): Declarations moved ...
	* writejbig2.c: ... to here.  Declare most functions as static.
	* am/libpdftex.am (libpdftex_a_SOURCES): Remove writejbig2.h.

2011-10-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
